--- a/AverageDay/Base.lproj/Main.storyboard
+++ b/AverageDay/Base.lproj/Main.storyboard
@@ -22,6 +22,12 @@
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
+                                        <menuItem title="Show All Entries" id="Onq-LD-sxf" userLabel="Show All Entries">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="showAllEntries:" target="Voe-Tx-rLC" id="NrD-aT-NdE"/>
+                                            </connections>
+                                        </menuItem>
                                         <menuItem title="Quit AverageDay" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
@@ -38,6 +44,7 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Average_Day" customModuleProvider="target">
                     <connections>
+                        <outlet property="showAllEntries" destination="Onq-LD-sxf" id="Plr-Yb-r5G"/>
                         <outlet property="statusMenu" destination="uQy-DD-JDr" id="DyN-VI-rD7"/>
                     </connections>
                 </customObject>
